<?xml version="1.0" encoding="utf-8"?>
<!-- 171283972 -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <TextView
        android:id="@+id/menutitle"
        android:layout_width="157dp"
        android:layout_height="59dp"
        android:fontFamily="casual"
        android:text="@string/menutxt"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162" />

    <Button
        android:id="@+id/btnnewsfeed"
        android:layout_width="178dp"
        android:layout_height="53dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="casual"
        android:onClick="NewsfeedClicked"
        android:text="@string/newsfeedtxt"
        android:textSize="14sp"
        app:backgroundTint="#4A4949"
        app:layout_constraintBottom_toTopOf="@+id/btnsubmitfeedback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnsubmitfeedback"
        android:layout_width="175dp"
        android:layout_height="56dp"
        android:layout_marginBottom="312dp"
        android:fontFamily="casual"
        android:onClick="feedClicked"
        android:text="@string/submittxt"
        app:backgroundTint="#4A4949"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>